# Qt5LinuxArmProject

./: .gitignore  CMakeLists.txt
doc/: OpenEuler.md
src/: main.cpp  version.h.in
